<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp"
    android:padding="15dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".controller.DialogFragmentFilter">

    <TextView
        android:id="@+id/dialogQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/FilterQuestion"
        android:textSize="21sp"
        style="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">
    </TextView>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/dialogDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/date"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/dialogQuestion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:focusable="false">
    </com.google.android.material.textfield.TextInputEditText>

    <Spinner
        android:id="@+id/dialogSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        app:layout_constraintTop_toBottomOf="@id/dialogDate"
        app:layout_constraintStart_toStartOf="parent"
        android:focusable="false">
    </Spinner>




</androidx.constraintlayout.widget.ConstraintLayout>